add_subdirectory(CameraImageViewer)
add_subdirectory(NullComponent)
add_subdirectory(RobotHardware)
add_subdirectory(StateHolder)
add_subdirectory(WavPlayer)
add_subdirectory(SequencePlayer)
add_subdirectory(DataLogger)
add_subdirectory(Joystick)
add_subdirectory(Joystick2Velocity2D)
add_subdirectory(Joystick2Velocity3D)
add_subdirectory(Joystick2PanTiltAngles)
add_subdirectory(ForwardKinematics)
add_subdirectory(HGcontroller)
add_subdirectory(Range2PointCloud)
add_subdirectory(Simulator)
add_subdirectory(Viewer)
add_subdirectory(JpegDecoder)
add_subdirectory(ImpedanceController)
add_subdirectory(SoftErrorLimiter)
add_subdirectory(VirtualForceSensor)
add_subdirectory(CollisionDetector)
add_subdirectory(GraspController)
add_subdirectory(TorqueFilter)
add_subdirectory(KalmanFilter)
if (NOT APPLE)
  add_subdirectory(VideoCapture)
endif()

# Octomap
pkg_check_modules(OCTOMAP octomap)

find_package(Irrlicht)
if (IRRLICHT_FOUND)
  add_subdirectory(OGMap3DViewer)
endif()

add_subdirectory(VirtualCamera)
if (OCTOMAP_FOUND)
  add_subdirectory(OccupancyGridMap3D)
endif()

set(EXTRA_RTC_DIRS "" CACHE PATH "directories of extra RTCs")
foreach(rtc_dir ${EXTRA_RTC_DIRS})
  add_subdirectory(${rtc_dir} ${rtc_dir})
endforeach()


